--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#0D1F35</color>
+    <color name="colorPrimaryDark">#0D1F35</color>
+    <color name="colorAccent">#5A6C84</color>
+    <color name="colorNavHeader">#5A6C84</color>
+    <color name="colorCardView">#F3F3F4</color>
 </resources>
