--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#0D1F35</color>
-    <color name="colorPrimaryDark">#0D1F35</color>
-    <color name="colorAccent">#5A6C84</color>
-    <color name="colorNavHeader">#5A6C84</color>
-    <color name="colorCardView">#F3F3F4</color>
+    <color name="colorPrimary">#5c14a5</color>
+    <color name="colorPrimaryDark">#3F0E70</color>
+    <color name="colorAccent">#5c14a5</color>
+    <color name="colorNavHeader">#5c14a5</color>
+    <color name="colorCardView">#eeeeee</color>
+    <color name="background">#ffffff</color>
+    <color name="backgroundText">#3c3c3c</color>
 </resources>
